source/logs/toontown-03-Jul-2019_14_51_21.log
ToontownStart: Polling for game2 to finish...
ToontownStart: Game2 is finished.
ToontownStart: Starting the game.
ToontownStart: setting default font
ToontownStart: Loading default gui sounds
ToontownStart: serverVersion:  ttn-dev
Traceback (most recent call last):
  File "H:\Toontown\Toontown Sources\Toontown-Next\source\dependencies\panda\python\lib\runpy.py", line 162, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "H:\Toontown\Toontown Sources\Toontown-Next\source\dependencies\panda\python\lib\runpy.py", line 72, in _run_code
    exec code in run_globals
  File "H:\Toontown\Toontown Sources\Toontown-Next\source\toontown\toonbase\ToontownStart.py", line 87, in <module>
    from toontown.distributed import ToontownClientRepository
  File "toontown\distributed\ToontownClientRepository.py", line 46, in <module>
    from toontown.toon import LocalToon
  File "toontown\toon\LocalToon.py", line 39, in <module>
    from toontown.shtiker import TopToonsPage
  File "toontown\shtiker\TopToonsPage.py", line 115
    def __getCurrentChallengeText(self):
      ^
SyntaxError: invalid syntax
